--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
               </nav>
               <div class="header__contacts">
                   <div class="header__contacts-block">
-                      <img src='./src/assets/svg/header/time.svg' alt="Время" class='header__contacts-icon'/>
+                      <img src="./src/assets/svg/header/time.svg" alt="Время" class='header__contacts-icon'/>
                       <p class='header__contacts-text'>Время работы:<br /><span class='header__contacts-text_black'>Ежедневно с 9:00 до 20:00</span></p>
                   </div>
                   <div class="header__line-decorate"></div>
                   <div class='header__contacts-block'>
-                      <img src='./src/assets/svg/header/3d.svg' alt="Номер телефона" class='header__contacts-icon'/>
+                      <img src="./src/assets/svg/header/3d.svg" alt="Номер телефона" class='header__contacts-icon'/>
                       <p class='header__contacts-text'>Получить 3D-снимок <span class='header__contacts-text_green'>0₽</span><br /><a href="tel:+73433190523"><span class='header__contacts-text_black'>+7 (343) 319 - 05 - 23</span></a></p>
                   </div>
                   <div class='header__line-decorate'></div>
@@ -37,8 +37,8 @@
           </div>
       </div>
       <div class='header__decorate'>
-          <img src='./src/assets/svg/header/headerDecorate.svg' alt="Угол" class='header__corner'/>
-          <img src='./src/assets/svg/header/headerDecorate.svg' alt="Угол" class='header__corner'/>
+          <img src="./src/assets/svg/header/headerDecorate.svg" alt="Угол" class='header__corner'/>
+          <img src="./src/assets/svg/header/headerDecorate.svg" alt="Угол" class='header__corner'/>
       </div>
       <div class='header__head-mobile'>
       <nav class='header__nav'>
@@ -104,10 +104,10 @@
                           <p class='hero__promo-data'>Акция до 31 октября</p>
                       </div>
                       <div class='hero__doctor-info'>
-                          <p class='hero__doctor-info--text'><img src='./src/assets/svg/hero/percent.svg' alt="" class='hero__doctor-info--logo'/>Рассрочка <b><i>0%</i></b> на <b><i>24 месяца</i></b></p>
+                          <p class='hero__doctor-info--text'><img src="./src/assets/svg/hero/percent.svg" alt="" class='hero__doctor-info--logo'/>Рассрочка <b><i>0%</i></b> на <b><i>24 месяца</i></b></p>
                           <p class='hero__doctor-info--text_white'>Проводил имплантацию<br />и протезирование:</p>
-                          <p class='hero__doctor-info--text'><img src='./src/assets/svg/hero/USA.svg' alt="" class='hero__doctor-info--logo'/>в клиниках США</p>
-                          <p class='hero__doctor-info--text'><img src='./src/assets/svg/hero/UK.svg' alt="" class='hero__doctor-info--logo'/>в клиниках Великобритании</p>
+                          <p class='hero__doctor-info--text'><img src="./src/assets/svg/hero/USA.svg" alt="" class='hero__doctor-info--logo'/>в клиниках США</p>
+                          <p class='hero__doctor-info--text'><img src="./src/assets/svg/hero/UK.svg" alt="" class='hero__doctor-info--logo'/>в клиниках Великобритании</p>
                       </div>
                   </div>
               </div>
@@ -145,19 +145,19 @@
                       <div class='regal__info animateOnScroll'>
                           <h3 class='regal__title'>Получите всю челюсть с приживаемостью <span class='regal__title_green'>99,8%</span> у экспертов мирового уровня</h3>
                           <div class='regal__checkbox'>
-                              <img src='./src/assets/svg/regal/checkmark.svg' alt="Галочка" class='regal__checkbox--img'/>
+                              <img src="./src/assets/svg/regal/checkmark.svg" alt="Галочка" class='regal__checkbox--img'/>
                               <p class='regal__chackbox--text'><b>Гарантия на работу врача</b><br />в 10 раз больше, чем по Минздрав</p>
                           </div>
                           <div class='regal__checkbox'>
-                              <img src='./src/assets/svg/regal/checkmark.svg' alt="Галочка" class='regal__checkbox--img'/>
+                              <img src="./src/assets/svg/regal/checkmark.svg" alt="Галочка" class='regal__checkbox--img'/>
                               <p class='regal__chackbox--text'><b>Импланты с гарантией 100 лет</b><br />7 систем под ваш случай и бюджет</p>
                           </div>
                           <div class='regal__checkbox'>
-                              <img src='./src/assets/svg/regal/checkmark.svg' alt="Галочка" class='regal__checkbox--img'/>
+                              <img src="./src/assets/svg/regal/checkmark.svg" alt="Галочка" class='regal__checkbox--img'/>
                               <p class='regal__chackbox--text'><b>Углубленная диагностика</b><br />костей и мягких тканей челюсти</p>
                           </div>
                           <div class='regal__checkbox'>
-                              <img src='./src/assets/svg/regal/checkmark.svg' alt="Галочка" class='regal__checkbox--img'/>
+                              <img src="./src/assets/svg/regal/checkmark.svg" alt="Галочка" class='regal__checkbox--img'/>
                               <p class='regal__chackbox--text'><b>Ускоренное приживление</b><br />за счёт точной установки до 0,1 мм</p>
                           </div>
                       </div>
@@ -605,15 +605,15 @@
                       </nav>
                       <div class="header__contacts">
                           <div class="header__contacts-block">
-                              <img src='./src/assets/svg/footer/time.svg' alt="Время" class='header__contacts-icon'/>
+                              <img src="./src/assets/svg/footer/time.svg" alt="Время" class='header__contacts-icon'/>
                               <p class='header__contacts-text footer__contacts-text'>Время работы:<br /><span class='header__contacts-text_black footer__contacts-text_down'>Ежедневно с 9:00 до 20:00</span></p>
                           </div>
                           <div class="header__line-decorate"></div>
-                          <div class='header__contacts-block'>
-                              <img src='./src/assets/svg/footer/3d.svg' alt="Номер телефона" class='header__contacts-icon'/>
+                          <div class="header__contacts-block">
+                              <img src="./src/assets/svg/footer/3d.svg" alt="Номер телефона" class='header__contacts-icon'/>
                               <p class='header__contacts-text footer__contacts-text'>Получить 3D-снимок <br /><a href="tel:+73433190523"><span class='header__contacts-text_black footer__contacts-text_down'>+7 (343) 319 - 05 - 23</span></a></p>
                           </div>
-                          <div class='header__line-decorate'></div>
+                          <div class="header__line-decorate"></div>
                           <a href="#bottom2"><button class='header__btn-request footer__nav-btn footer__btn-reques'>Обратный звонок</button></a>
                       </div>
                   </div>
